# web3-evm-wallet

./: .gitignore  Cargo.toml  README.md
src/: contracts_manager.rs  main.rs  smart_contract.rs  smart_contracts_info.json  utils.rs  wallet.rs
src/contracts/ABIs/: counter_abi.json  voting_abi.json
src/contracts/contracts/: counter.sol  voting.sol
